# emergency-lang-kit

./: .dockerignore  .env.example  .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  ROADMAP.md  dia.txt  docker-compose.yml  performance_rationale.md  pyproject.toml  requirements-dev.txt  requirements.txt  resu.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
core/: analytics.py  interfaces.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HARDENING_REPORT.md  MASTER_VISION.md  TEST_RESULTS.md  architecture.md  kernel-design.md  language-packs.md  pipeline.md  plugins-guide.md  roadmap.md  topology.md  vision.md
elk/: __init__.py  cli.py
elk/api/: app.py  auth.py  limiter.py  middleware.py  routes.py  schemas.py
elk/connectors/: base.py  factory.py  mock_erp.py  webhook.py
elk/core/: config.py
elk/database/: db.py  models.py
elk/engine/: config.py
elk/engine/ai/: llm.py
elk/engine/analytics/: __init__.py
elk/factory/: config.py  extractor.py  loader.py
elk/server/: app.py  schemas.py
elk/training/: __init__.py  dataset.py  trainer.py
elk/workers/: main.py
examples/: use-cases.md
packs/: __init__.py
packs/dz_kab_protection/: __init__.py  config.yaml  geography.json  rules.yaml
packs/test_pack/: __init__.py  config.yaml
tests/: benchmark.py  benchmark_middleware_io.py  conftest.py  test_api.py  test_real_ai.py  test_security_backpressure.py  test_server.py  test_validators.py
tools/: benchmark.py  demo_request.py  verify_all.py
(+26 files in other folders)
