[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-lang-kit"
version = "0.1.0"
description = "Enterprise AI Agent for Emergency Call Analysis"
readme = "README.md"
authors = [
  { name = "RayanTR", email = "rayantr06@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "google-generativeai>=0.4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "streamlit>=1.32.0"
]

[project.urls]
"Homepage" = "https://github.com/rayantr06/emergency-lang-kit"
"Bug Tracker" = "https://github.com/rayantr06/emergency-lang-kit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["elk*"]
